[gd_scene load_steps=2 format=3 uid="uid://cv3r6yrm7v50l"]

[ext_resource type="Script" path="res://scenes/scripts/shop.gd" id="1_vqnvh"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_vqnvh")

[node name="ColorRect" type="ColorRect" parent="." groups=["ShopElements"]]
offset_right = 1152.0
offset_bottom = 652.0
color = Color(1, 0.0980392, 1, 1)

[node name="buy_jumps" type="Button" parent="." groups=["ShopElements"]]
offset_left = 187.0
offset_top = 323.0
offset_right = 363.0
offset_bottom = 364.0
text = "Buy Jumps"

[node name="buy_hover" type="Button" parent="." groups=["ShopElements"]]
offset_left = 187.0
offset_top = 376.0
offset_right = 363.0
offset_bottom = 417.0
text = "Buy Hover"

[node name="exit_shop" type="Button" parent="." groups=["ShopElements"]]
offset_left = 659.0
offset_top = 347.0
offset_right = 835.0
offset_bottom = 388.0
text = "exit shop"

[node name="stats" type="Label" parent="." groups=["ShopElements"]]
offset_left = 28.0
offset_top = 63.0
offset_right = 384.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 27
text = "stats:"

[node name="NoJumpLabel" type="Label" parent="." groups=["ShopElements"]]
offset_left = 29.0
offset_top = 96.0
offset_right = 385.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 34
text = "0 double jumps"

[node name="NoHoverLabel" type="Label" parent="." groups=["ShopElements"]]
offset_left = 28.0
offset_top = 145.0
offset_right = 384.0
offset_bottom = 212.0
theme_override_font_sizes/font_size = 34
text = "0 Hover secs"

[node name="AvailableCoins" type="Label" parent="." groups=["ShopElements"]]
offset_left = 26.0
offset_top = 18.0
offset_right = 382.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0, 0.952941, 0, 1)
theme_override_font_sizes/font_size = 27
text = "points to spend: 0"

[node name="show_shop" type="Button" parent="."]
visible = false
offset_left = 994.0
offset_top = 12.0
offset_right = 1138.0
offset_bottom = 53.0
text = "show shop"

[connection signal="button_down" from="buy_jumps" to="." method="_on_button_buy_jumps"]
[connection signal="button_down" from="buy_hover" to="." method="_on_button_buy_hover"]
[connection signal="button_down" from="exit_shop" to="." method="_on_button_play"]
[connection signal="button_down" from="show_shop" to="." method="_on_button_show_shop"]
